--- a/color-flood-3d/src/App.css
+++ b/color-flood-3d/src/App.css
@@ -1,9 +1,4 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+/* Removed constraining styles for #root to allow full-screen game */
 
 .logo {
   height: 6em;
