--- a/color-flood-3d/src/games/color-flood/ColorFloodGame.css
+++ b/color-flood-3d/src/games/color-flood/ColorFloodGame.css
@@ -1678,6 +1678,12 @@
   font-size: 1.1rem;
 }
 
+.minimal-button span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .new-game-container {
   position: relative;
 }
